--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hyperspaceinc/style-guide",
   "description": "ESLint and Prettier style guide for various Hyperspace projects :call_me_hand:",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "Griko Nibras <griko@hyperspace.us>",
   "repository": "https://github.com/hyperspaceinc/style-guide",
   "homepage": "https://github.com/hyperspaceinc/style-guide",
@@ -17,6 +17,7 @@
     "lint": "eslint --fix \"**/*.js\""
   },
   "dependencies": {
+    "@babel/core": "^7",
     "@babel/eslint-parser": "^7",
     "@rushstack/eslint-patch": "^1",
     "@typescript-eslint/eslint-plugin": "^5",
@@ -31,9 +32,9 @@
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-react": "^7",
     "eslint-plugin-react-hooks": "^4",
-    "eslint-plugin-simple-import-sort": "^7",
+    "eslint-plugin-simple-import-sort": "^8",
     "eslint-plugin-tsdoc": "^0",
-    "eslint-plugin-unicorn": "^43",
+    "eslint-plugin-unicorn": "^44",
     "eslint-plugin-unused-imports": "^2"
   },
   "peerDependencies": {
@@ -42,8 +43,8 @@
     "typescript": "^4"
   },
   "optionalDependencies": {
-    "@next/eslint-plugin-next": "^12",
-    "eslint-plugin-jest": "^26",
+    "@next/eslint-plugin-next": "*",
+    "eslint-plugin-jest": "^27",
     "eslint-plugin-tailwindcss": "^3",
     "eslint-plugin-testing-library": "^5"
   },
