--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hyperspaceinc/style-guide",
   "description": "ESLint and Prettier style guide for various Hyperspace projects 🤙",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "author": "Griko Nibras <griko@hyperspace.us>",
   "repository": "https://github.com/hyperspaceinc/style-guide",
   "homepage": "https://github.com/hyperspaceinc/style-guide",
@@ -10,22 +10,20 @@
     "eslint/**/*.js",
     "prettier/**/*.js",
     "tsconfig/*.json",
-    "*.json"
+    "*.json",
+    "index.js",
+    "index.d.ts"
   ],
   "sideEffects": false,
-  "scripts": {
-    "lint": "eslint --fix \"**/*.js\"",
-    "trim-core": "node scripts/trim-core"
-  },
   "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/eslint-parser": "^7.19.1",
+    "@babel/core": "^7.21.4",
+    "@babel/eslint-parser": "^7.21.3",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -35,14 +33,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "eslint-plugin-unicorn": "^45.0.2",
+    "eslint-plugin-unicorn": "^46.0.0",
     "eslint-plugin-unused-imports": "^2.0.0"
   },
   "peerDependencies": {
     "eslint": ">=8",
     "prettier": ">=2",
     "tailwindcss": ">=3",
-    "typescript": ">=4"
+    "typescript": ">=4 || >=5"
   },
   "peerDependenciesMeta": {
     "eslint": {
@@ -59,19 +57,19 @@
     }
   },
   "optionalDependencies": {
-    "@next/eslint-plugin-next": "^13.1.6",
+    "@next/eslint-plugin-next": "^13.3.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-playwright": "^0.12.0",
-    "eslint-plugin-tailwindcss": "^3.8.3",
-    "eslint-plugin-testing-library": "^5.10.0"
+    "eslint-plugin-tailwindcss": "^3.11.0",
+    "eslint-plugin-testing-library": "^5.10.2"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.0",
-    "@types/node": "^18.11.18",
+    "@types/eslint": "^8.37.0",
+    "@types/node": "^18.15.11",
     "@types/prettier": "^2.7.2",
-    "eslint": "^8.33.0",
-    "prettier": "^2.8.3",
-    "typescript": "^4.9.5"
+    "eslint": "^8.38.0",
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.4"
   },
   "keywords": [
     "eslint-config",
@@ -84,10 +82,6 @@
   "publishConfig": {
     "access": "restricted",
     "registry": "https://npm.pkg.github.com"
-  },
-  "eslintConfig": {
-    "extends": "./eslint/config-authoring",
-    "root": true
   },
   "prettier": "./prettier",
   "license": "MPL"
